--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,13 +22,13 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.laksheyjasoria }}
-          outputs: snake.svg?palette=github-dark
+          outputs: dist/snake.svg?palette=github-dark
 
 
       - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: /
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
