--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -55,7 +55,7 @@ jobs:
       - name: generate github contribution snake svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: ${{ github.laksheyjasoria }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
